package com.directi.training.isp.refactored;

public interface Lockable {
    void lock();
    void unlock();
}
