package com.directi.training.isp.refactored;

public interface Openable {
    void open();
    void close();
}
