package com.directi.training.isp.refactored;

public interface ProximityAware {
    void proximityCallback();
}
