package com.directi.training.isp.refactored;

import java.util.Random;

public class Sensor {
    public void register(ProximityAware door) {
        while (true) {
            if (isPersonClose()) {
                door.proximityCallback();
                break;
            }
        }
    }

    private boolean isPersonClose() {
        return new Random().nextBoolean();
    }
}
