package com.directi.training.isp.refactored;

public interface TimeAware {
    void timeOutCallback();
}
